Rename websites playbook

--- a/playbook.yml
+++ b/playbook.yml
@@ -43,5 +43,5 @@
 - name: Install and configure PHP-FPM
   import_playbook: playbooks/web_php/main.yml
 
-- name: Add a default dev site (possibly with https) for testing/dev info, only in dev environment
-  import_playbook: playbooks/web_dev_site/main.yml
+- name: Configure all websites
+  import_playbook: playbooks/web_websites/main.yml
